--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ collections:
 copy_to_destination:
   - node_modules/identity-style-guide/dist/assets
   - node_modules/anchor-js/anchor.min.js
+  - node_modules/@18f/private-eye/private-eye.js
 
 plugins:
   - jekyll-redirect-from
