--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,18 +20,18 @@ jobs:
             - gem-cache-v1
       - restore_cache:
           keys:
-            - yarn-packages-v1-{{ checksum "yarn.lock" }}
-            - yarn-packages-v1-
+            - npm-packages-v1-{{ checksum "package-lock.json" }}
+            - npm-packages-v1-
       - run: bundle install --path vendor/bundle
-      - run: yarn install
+      - run: npm install
       - save_cache:
           key: gem-cache-v1-{{ arch }}-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
       - save_cache:
-          key: yarn-packages-v1-{{ checksum "yarn.lock" }}
+          key: npm-packages-v1-{{ checksum "package-lock.json" }}
           paths:
-            - ~/.cache/yarn
+            - ~/.npm
       - run:
           name: Run markdown source spec (catches things that might break the build)
           command: bundle exec rspec `pwd`/spec/markdown_spec.rb
