--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.6-node
+      - image: cimg/ruby:2.6-node
         environment:
           BUNDLER_VERSION: 2.1.4
     working_directory: ~/identity-handbook
