Add configuration via env vars
- Federalist no longer supports overriding _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,6 @@ github_repo_url: https://github.com/18F/identity-handbook  # enables "edit this 
 
 markdown: kramdown
 
-idp_base_url: http://localhost:3000
-
 collections:
   articles:
     output: true
@@ -21,6 +19,7 @@ copy_to_destination:
 plugins:
   - jekyll-redirect-from
   - jekyll-last-modified-at
+  - jekyll-environment-variables
 
 exclude:
   - CONTRIBUTING.md
