--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@18f/private-eye": "^2.0.0",
     "anchor-js": "^4.2.2",
-    "identity-style-guide": "^6.3.0"
+    "htm": "^3.1.0",
+    "identity-style-guide": "^6.3.0",
+    "preact": "^10.6.6"
   }
 }
