--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,13 @@ copy_to_destination:
   - node_modules/identity-style-guide/dist/assets
   - node_modules/anchor-js/anchor.min.js
   - node_modules/@18f/private-eye/private-eye.js
+  - node_modules/preact/dist/preact.module.js
+  - node_modules/htm/dist/htm.module.js
 
 plugins:
   - jekyll-redirect-from
   - jekyll-last-modified-at
+  - jekyll-environment-variables
 
 exclude:
   - CONTRIBUTING.md
