Allow page content to be editable as well
Co-authored-by: Andrew Duthie <aduth@users.noreply.github.com>

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -38,4 +38,5 @@ collections:
           - Reporting
           - Security
           - Team
-        default: 'get-started'
+        default: Team
+      - { label: 'Body', name: 'body', widget: 'markdown' }
