Add JavaScript compilation step
**Why**: For improved maintainability as we seek to expand JavaScript implementation.

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,5 +9,15 @@
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "pragma": "h",
+      "fragment": "Fragment",
+      "version": "16.2"
+    }
+  },
+  "rules": {
+    "react/jsx-uses-react": "error"
   }
 }
