--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@18f/eslint-plugin-identity": "^2.0.0",
+    "@types/anchor-js": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "esbuild": "^0.14.27",
