Update build path

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.6.2"
   },
   "scripts": {
-    "clean": "rm -rf assets/js/build",
+    "clean": "rm -rf assets/build",
     "prebuild:common": "npm run clean",
     "build:common": "esbuild `find assets/js -type f -not -name '*.min.*'` --outdir=assets/build --bundle --format=esm",
     "build:dev": "npm run build:common -- --sourcemap=inline",
