Try to override typings... just cast as any

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "jsx": "preserve",
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "preact",
+    "paths": {
+      "*": ["./assets/js/typings/*"]
+    }
   },
   "include": ["assets/js/*"]
 }
