Add typings for anchor-js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
     "jsxImportSource": "preact",
+    "baseUrl": ".",
     "paths": {
-      "*": ["./assets/js/typings/*"]
+      "*": ["assets/js/typings/*"]
     }
   },
   "include": ["assets/js/*"]
