modulify other JS on the page (#233)
* modulify other JS on the page

* lintfix

* Add --splitting

Co-authored-by: Andrew Duthie <aduth@users.noreply.github.com>

* Fix build path

* Try to override typings... just cast as any

* Add typings for anchor-js

* Add `Anchor#add` types

Co-authored-by: Andrew Duthie <aduth@users.noreply.github.com>
Co-authored-by: Andrew Duthie <andrew.duthie@gsa.gov>

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "clean": "rm -rf assets/build",
     "prebuild:common": "npm run clean",
-    "build:common": "esbuild `find assets/js -type f -not -name '*.min.*'` --outdir=assets/build --bundle --format=esm",
+    "build:common": "esbuild `find assets/js -type f -not -name '*.min.*'` --outdir=assets/build --bundle --format=esm --splitting",
     "build:dev": "npm run build:common -- --sourcemap=inline",
     "build:prod": "npm run build:common -- --minify",
     "build": "npm run build:prod",
