--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "jsx": "preserve",
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
-    "jsxImportSource": "preact"
+    "jsxImportSource": "preact",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["assets/js/typings/*"]
+    }
   },
   "include": ["assets/js/*"]
 }
