--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "anchor-js": "^4.2.2",
     "htm": "^3.1.0",
     "identity-style-guide": "^6.3.0",
-    "preact": "^10.6.6"
+    "preact": "^10.6.6",
+    "simple-jekyll-search": "^1.10.0"
   },
   "devDependencies": {
     "@18f/eslint-plugin-identity": "^2.0.0",
