--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "esModuleInterop": true,
     "noEmit": true,
     "jsx": "preserve",
@@ -11,7 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "*": ["assets/js/typings/*"]
-    }
+    },
+    "lib": ["ES2020"]
   },
   "include": ["assets/js/*"]
 }
