--- a/package.json
+++ b/package.json
@@ -8,12 +8,29 @@
   },
   "devDependencies": {
     "@18f/eslint-plugin-identity": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "esbuild": "^0.14.27",
     "eslint": "^8.11.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1"
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.6.2"
   },
   "scripts": {
-    "lint": "eslint assets/js --ext .js,.jsx,.ts,.tsx"
+    "clean": "rm -rf assets/build",
+    "prebuild:common": "npm run clean",
+    "build:common": "esbuild `find assets/js -type f -not -name '*.min.*'` --outdir=assets/build --bundle --format=esm --splitting",
+    "build:dev": "npm run build:common -- --sourcemap=inline",
+    "build:prod": "npm run build:common -- --minify",
+    "build": "npm run build:prod",
+    "prestart": "npm run clean",
+    "start": "npm run build:dev -- --watch",
+    "lint": "eslint assets/js --ext .js,.jsx,.ts,.tsx",
+    "typecheck": "tsc",
+    "federalist": "npm run build"
   }
 }
