Add more types (#235)
* import, add types for SimpleJekyllSearch
  - It sets a global property on window :[
* Add typings for 18f/private-eye
* Add back in noImplicitAny, add types to analytics-events
* Combine setup scripts into one file
* Update setup script to do everything, move search JSON to data attribute
* Put typings in correct spot\
* Remove unused definition
* Add eslint ignore... tsc knows about this, it's probably fine
* Add body data-base-url attr

Co-authored-by: Andrew Duthie <andrew.duthie@gsa.gov>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "strict": true,
-    "noImplicitAny": false,
     "esModuleInterop": true,
     "noEmit": true,
     "jsx": "preserve",
@@ -11,7 +10,8 @@
     "baseUrl": ".",
     "paths": {
       "*": ["assets/js/typings/*"]
-    }
+    },
+    "lib": ["ES2020"]
   },
   "include": ["assets/js/*"]
 }
