--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "htm": "^3.1.0",
     "identity-style-guide": "^6.3.0",
     "js-yaml": "^4.1.0",
+    "marked": "^4.0.12",
     "preact": "^10.6.6",
+    "preact-markup": "^2.1.1",
     "simple-jekyll-search": "^1.10.0"
   },
   "devDependencies": {
     "@18f/eslint-plugin-identity": "^2.0.0",
     "@types/js-yaml": "^4.0.5",
+    "@types/marked": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "esbuild": "^0.14.27",
