--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     },
     "lib": ["ES2020"]
   },
-  "include": ["assets/js/*"]
+  "include": ["assets/js/*"],
+  "exclude": ["node_modules/"]
 }
