--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "js-yaml": "^4.1.0",
     "marked": "^4.0.12",
     "preact": "^10.6.6",
+    "preact-markup": "^2.1.1",
     "simple-jekyll-search": "^1.10.0"
   },
   "devDependencies": {
