--- a/_data/sprint_teams.yml
+++ b/_data/sprint_teams.yml
@@ -60,6 +60,12 @@
   slack_channel_url: https://gsa-tts.slack.com/archives/C01DBBNTL68
   slack_channel_name: login-team-radia
 
+- name: Ross
+  namesake_markdown: "[Mary G Ross](https://en.wikipedia.org/wiki/Mary_Golda_Ross), the first known Native American female engineer, she worked on the preliminary design concepts for interplanetary space travel, manned space flight, ballistic missiles, and satellites in orbit above the earth"
+  focus_area: Inherited Proofing
+  slack_channel_url: https://gsa-tts.slack.com/archives/C03JDA5HNUV
+  slack_channel_name: login-team-ross
+
 - name: Ursula
   namesake_markdown: "[Ursula Burns](https://en.wikipedia.org/wiki/Ursula_Burns), who has been CEO of technology companies like Xerox"
   focus_area: Partnership website and partner console
