create temporary netlify sandbox section

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,6 +33,7 @@ collections:
           - Development
           - Handbook
           - Infrastructure
+          - Netlify Sandbox
           - Partnerships
           - Product
           - Reporting
