--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "strict": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "jsx": "preserve",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "react-jsx",
     "jsxImportSource": "preact",
     "baseUrl": ".",
     "paths": {
