--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "start": "npm run build:dev -- --watch",
     "lint": "eslint assets/js --ext .js,.jsx,.ts,.tsx",
     "typecheck": "tsc",
-    "federalist": "npm run build"
+    "pages": "npm run build"
   }
 }
