add path to collections

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,7 @@ collections:
     name: help
     folder: _articles
     create: true
+    path: '{{category}}/{{slug}}'
     summary: '{{category}}: {{title}}'
     sortable_fields: ['category', 'title', 'commit_date', 'commit_author']
     fields:
