--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "clean": "rm -rf assets/build",
-    "cspell": "cspell --config cspell.json '**/*.md' --no-progress",
+    "cspell": "cspell --config cspell.json --no-progress '**/*.md' --exclude 'vendor/**' --exclude 'node_modules/**'",
     "prebuild:common": "npm run clean",
     "build:common": "esbuild `find assets/js -type f -not -name '*.min.*'` --outdir=assets/build --bundle --format=esm --splitting",
     "build:dev": "npm run build:common -- --sourcemap=inline",
