Build JavaScript files to site output directory
See https://github.com/18F/identity-site/pull/1011

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ sass:
 copy_to_destination:
   - node_modules/identity-style-guide/dist/assets
 
+keep_files:
+  - assets/js
+
 plugins:
   - jekyll-redirect-from
   - jekyll-last-modified-at
