Upgrade Login.gov Design System to v7.0.1

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ sass:
     - node_modules
 
 copy_to_destination:
-  - node_modules/identity-style-guide/dist/assets
+  - node_modules/@18f/identity-design-system/dist/assets
 
 keep_files:
   - assets/js
