add timnit to teams

--- a/_data/sprint_teams.yml
+++ b/_data/sprint_teams.yml
@@ -76,6 +76,13 @@
   slack_channel_name: login-team-ross
   archived: true
 
+- name: Timnit
+  namesake_markdown: "[Timnit Gebru](https://en.wikipedia.org/wiki/Timnit_Gebru), a computer scientist who has published work exposing biases in AI and algorithms."
+  focus_area: Document Capture & Authentication
+  slack_channel_url: https://gsa-tts.slack.com/archives/C056RD1NEHW
+  slack_channel_name: login-team-timnit
+  readme: https://docs.google.com/document/d/1p_uTBlsa6XjMfF6hv5ykm3_gdWP-Uib5cxdUqW30cCc/edit?usp=sharing
+
 - name: Ursula
   namesake_markdown: "[Ursula Burns](https://en.wikipedia.org/wiki/Ursula_Burns), who has been CEO of technology companies like Xerox"
   focus_area: Partnership website and partner console
