--- a/_data/sprint_teams.yml
+++ b/_data/sprint_teams.yml
@@ -81,7 +81,7 @@
   focus_area: Document Capture & Authentication
   slack_channel_url: https://gsa-tts.slack.com/archives/C056RD1NEHW
   slack_channel_name: login-team-timnit
-  charter: https://docs.google.com/document/d/1ZBnTX1-XqNo6L7dG1m8CQqiFlb9qX_oonrp_t9XwvFk/edit?usp=sharing
+  readme: https://docs.google.com/document/d/1ZBnTX1-XqNo6L7dG1m8CQqiFlb9qX_oonrp_t9XwvFk/edit?usp=sharing
 
 - name: Ursula
   namesake_markdown: "[Ursula Burns](https://en.wikipedia.org/wiki/Ursula_Burns), who has been CEO of technology companies like Xerox"
