--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "@18f/identity-build-sass": "^1.1.0",
-    "@18f/identity-design-system": "^7.0.1",
+    "@18f/identity-build-sass": "^3.0.0",
+    "@18f/identity-design-system": "^9.0.0",
     "@18f/private-eye": "^2.1.0",
     "anchor-js": "^4.2.2",
     "concurrently": "^8.0.1",
@@ -38,7 +38,7 @@
     "build:js:dev": "npm run build:js:common -- --sourcemap=inline",
     "build:js:prod": "npm run build:js:common -- --minify",
     "prebuild:css": "mkdir -p _site/assets/css",
-    "build:css": "build-sass assets/scss/*.scss --out-dir=_site/assets/css --load-path=node_modules/@18f/identity-design-system/packages",
+    "build:css": "build-sass assets/scss/*.scss --out-dir=_site/assets/css",
     "build": "concurrently npm:build:js:prod npm:build:css",
     "watch:js:dev": "npm run build:js:dev -- --watch",
     "watch:css": "npm run build:css -- --watch",
