--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
     "strict": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
     "baseUrl": ".",
     "paths": {
       "*": ["assets/js/typings/*"]
     },
-    "lib": ["ES2020"]
+    "lib": ["ES2020", "DOM"]
   },
   "include": ["assets/js/*"]
 }
