--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "anchor-js": "^4.2.2",
     "concurrently": "^8.0.1",
     "esbuild": "^0.17.15",
-    "pagefind": "^1.2.0",
-    "simple-jekyll-search": "^1.10.0"
+    "pagefind": "^1.2.0"
   },
   "devDependencies": {
     "@18f/eslint-plugin-identity": "^2.0.0",
